# glad_opengl46

./: CMakeLists.txt  Config.cmake.in  meson.build
include/glad/: glad.h
src/: glad.c
